# platform.core.account.sync-manager

./: CMakeLists.txt  sync-service.manifest  sync_adapter.xml  sync_manager.xml  tags
TC/: utc-sync-manager.c
common/: sync-ipc-marshal.c  sync-ipc-marshal.h  sync-log.h
doc/: sync_manager_doc.h
include/: sync-error.h  sync_adapter.h  sync_manager.h  sync_manager_internal.h
include/mobile/: sync_manager.h
include/wearable/: sync_manager.h
packaging/: org.tizen.sync.adapter.conf  org.tizen.sync.adapter.service  org.tizen.sync.conf  org.tizen.sync.service  sync-manager.service  sync-manager.spec
src/sync-client/: CMakeLists.txt  core-sync-client.pc.in  sync_adapter.c  sync_manager.c
src/sync-service/: CMakeLists.txt  SyncManager_BatteryStatusListener.cpp  SyncManager_BatteryStatusListener.h  SyncManager_CapabilityInfo.cpp  SyncManager_CapabilityInfo.h  SyncManager_CurrentSyncContext.cpp  SyncManager_CurrentSyncContext.h  SyncManager_CurrentSyncJobQueue.cpp  SyncManager_CurrentSyncJobQueue.h  SyncManager_DataChangeListener.cpp  SyncManager_DataChangeListener.h  SyncManager_DataChangeSyncScheduler.cpp  SyncManager_DataChangeSyncScheduler.h  SyncManager_DataSyncJob.cpp  SyncManager_DataSyncJob.h  SyncManager_DayStats.cpp  SyncManager_DayStats.h  SyncManager_HistoryItem.cpp  SyncManager_HistoryItem.h  SyncManager_ISyncJob.h  SyncManager_JsonParser.cpp  SyncManager_JsonParser.h  SyncManager_ManageIdleState.cpp  SyncManager_ManageIdleState.h  SyncManager_NetworkChangeListener.cpp  SyncManager_NetworkChangeListener.h  SyncManager_PendingJob.cpp  SyncManager_PendingJob.h  SyncManager_PeriodicSyncJob.cpp  SyncManager_PeriodicSyncJob.h  SyncManager_PeriodicSyncScheduler.cpp  SyncManager_PeriodicSyncScheduler.h  SyncManager_ProviderSettings.cpp  SyncManager_ProviderSettings.h  SyncManager_RepositoryEngine.cpp  SyncManager_RepositoryEngine.h  SyncManager_ServiceInterface.cpp  SyncManager_ServiceInterface.h  SyncManager_SettingsDbHelper.cpp  SyncManager_SettingsDbHelper.h  (+28 more)
